# alpaca-main

./: .gitattributes  .gitignore  AGENTS.md  GEMINI.md  README.md  docker-compose.local.yaml  docker-compose.yaml  nx.json  package-lock.json  package.json  render.yaml  vector.toml
.envs/: .env.local
.github/: dependabot.yml
.github/workflows/: backend-image.yml  backend.yml  ci.yml  frontend-image.yml  frontend.yml  gke-deploy.yml  nginx-image.yml  trigger-render-hooks.yml
backend/: AGENTS.md  GEMINI.md  README.md  http_server.py  manage.py  package.json  project.json  pyproject.toml
backend/apps/account/migrations/: 0001_initial.py
backend/apps/core/: admin.py  apps.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/apps/core/management/commands/: run_websocket.py
backend/apps/core/migrations/: 0001_initial.py  0002_alter_asset_exchange.py  0003_candle_minute_candle_ids.py  0004_asset_search_indexes.py  0005_rename_core_asset_symbol_7c8ca0_idx_idx_asset_sym_cls_and_more.py  0006_watchlist_is_default_alter_watchlist_user.py  0007_add_last_sync_at_to_alpacaccount.py  0008_add_sync_status_model.py  0009_alter_candle_volume.py  0010_new_candle_models.py  0011_datarefreshbatch_datarefreshtask.py
backend/apps/core/models/: __init__.py  assets.py  base.py  candles.py  data_refresh.py  ticks.py
backend/apps/core/services/: alpaca_service.py  backfill_coordinator.py  candle_cache.py  candle_repository.py  websocket_service.py
backend/apps/core/services/websocket/: aggregator.py  client.py  connection.py  persistence.py  repository.py  subscription.py  subscriptions.py
backend/apps/core/tests/: test_candle_aggregator.py  test_client_integration.py  test_connection.py  test_subscription_manager.py  test_websocket_aggregator.py  test_websocket_client.py  test_websocket_persistence.py
backend/apps/core/views/: __init__.py  candle_views.py  main.py
backend/apps/home/management/commands/: process_data.py
backend/apps/paper_trading/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/paper_trading/migrations/: 0001_initial.py  0002_alter_papertrade_created_at_and_more.py
backend/apps/paper_trading/tests/: test_api.py
backend/main/: cache_keys.py  celery.py  const.py  urls.py
backend/main/settings/: base.py  local.py  production.py
backend/scripts/: run_websocket.sh
backend/scripts/production/: run_flower_prod.sh  run_process_data.sh
charts/alpaca-main/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
charts/alpaca-main/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  celery-beat-deployment.yaml  celery-worker-deployment.yaml  configmap.yaml  flower-deployment.yaml  flower-service.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  nginx-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml  serviceaccount.yaml  websocket-deployment.yaml  websocket-service.yaml
docs/: GKE_DEPLOYMENT.md  performance-optimizations.md
frontend/: .env.production  .eslintrc.cjs  AGENTS.md  GEMINI.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: analyticsMiddleware.ts  store.ts
frontend/src/features/about/: index.tsx
frontend/src/features/accounts/: index.tsx
frontend/src/features/assets/: AssetDetailPage.tsx  assetSlice.ts  index.tsx
frontend/src/features/auth/: authSlice.ts  index.tsx
frontend/src/features/contact/: index.tsx
frontend/src/features/graphs/: INDICATOR_CONFIG.md  graphSlice.ts  index.tsx
frontend/src/features/health/: healthSlice.ts
frontend/src/features/home/: index.tsx
frontend/src/features/instruments/: index.tsx
frontend/src/features/paperTrading/: paperTradingApi.ts
frontend/src/features/privacy/: index.tsx
frontend/src/features/profile/: index.tsx
frontend/src/features/terms/: index.tsx
frontend/src/features/watchlists/: index.tsx
frontend/src/landing/: bootstrapLanding.ts
frontend/src/shared/api/: alpacaService.ts  assetService.ts  baseApi.ts  baseApi.tsx  breezeServices.tsx  userAuthService.ts
scripts/: check-env.js  cli-ui.js  dev-bootstrap.js  dev-check.js  dev-init.js  docker-build.js  install.js  preinstall-checks.js  setup-dev.bat  setup-dev.sh
(+134 files in other folders)
