[project]
name = "backend"
version = "0.1.0"
description = "An Alpaca API wrapper for Python"
authors = [
    { name = "Mohammad Naveed Khan", email = "naveedkhan13041998@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp>=5.3.1",
    "arrow>=1.4.0",
    "asgiref>=3.11.1",
    "async-timeout>=5.0.1",
    "attrs>=26.1.0",
    "autobahn>=25.12.2",
    "automat>=25.4.16",
    "bidict>=0.23.1",
    "billiard>=4.2.4",
    "binaryornot>=0.6.0",
    "celery>=5.6.3",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "channels>=4.3.2",
    "chardet>=7.4.3",
    "charset-normalizer>=3.4.7",
    "click>=8.3.2",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "colorama>=0.4.6",
    "constantly>=23.10.4",
    "cookiecutter>=2.7.1",
    "cryptography>=46.0.7",
    "cython>=3.2.4",
    "daphne>=4.2.1",
    "django>=6.0.4",
    "django-browser-reload>=1.21.0",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "flower>=2.0.1",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=25.3.0",
    "hyperlink>=21.0.0",
    "idna>=3.11",
    "incremental>=24.11.0",
    "ipython>=9.12.0",
    "jinja2>=3.1.6",
    "kombu>=5.6.2",
    "markdown-it-py>=4.0.0",
    "markupsafe>=3.0.3",
    "mdurl>=0.1.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "prompt-toolkit>=3.0.52",
    "psycopg2-binary>=2.9.11",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pygments>=2.20.0",
    "pyjwt>=2.12.1",
    "pyopenssl>=26.0.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-engineio>=4.13.1",
    "python-slugify>=8.0.4",
    "python-socketio>=5.16.1",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "service-identity>=24.2.0",
    "six>=1.17.0",
    "sqlparse>=0.5.5",
    "text-unidecode>=1.3",
    "twisted>=25.5.0",
    "txaio>=25.12.2",
    "types-python-dateutil>=2.9.0.20260408",
    "typing-extensions>=4.15.0",
    "tzdata>=2026.1",
    "urllib3>=2.6.3",
    "vine>=5.1.0",
    "watchdog>=6.0.0",
    "wcwidth>=0.6.0",
    "websocket-client>=1.9.0",
    "zope-interface>=8.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.15.11", "black>=26.3.1"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused-function-args
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "Q",      # flake8-quotes
    "UP",     # pyupgrade
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
    "SIM113",
    "SIM115",
    "SIM118",
    "ARG001",
    "TC003",
    "SIM102",
    "TC001",
]
unfixable = [
    "F841", # remove unused variables
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**/*" = ["S101", "ARG", "FBT"]
"**/migrations/**/*" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
force-sort-within-sections = true
split-on-trailing-comma = true
